# pytoy-llm

./: README.md  designs.md  pyproject.toml
.github/prompts/: example_prompt.md
.github/workflows/: python-ci.yml
src/pytoy_llm/: __init__.py  cli.py  client.py  configurations.py  connection_configuration.py  converters.py  exceptions.py  experiments.py  impl.py  litellm_client.py  models.py
src/pytoy_llm/agents/: __init__.py
src/pytoy_llm/materials/: core.py
src/pytoy_llm/materials/basemodels/: __init__.py
src/pytoy_llm/materials/composers/: __init__.py  invocation_prompt_composer.py  models.py  naive_composer.py  naive_section_composer.py  task_prompt_composer.py
src/pytoy_llm/materials/git_diffs/: __init__.py  collectors.py  fetcher.py  models.py
src/pytoy_llm/materials/text_files/: __init__.py  models.py
src/pytoy_llm/pydantic_agent/: __init__.py
src/pytoy_llm/task/: __init__.py  models.py  samples.py
src/pytoy_llm/task/models/: __init__.py  context.py  context_protocols.py  invocations.py  llm_facade.py  repository.py  schemas.py
tests/: test_configurations.py  test_message_converters.py  test_task_prompt_composer.py
tests/materials/: test_core.py  test_git_diffs.py  test_text_files.py
